[gd_scene load_steps=4 format=1]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://game/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://game/shared/menu_button.tscn" type="PackedScene" id=3]

[node name="main_menu" type="GridContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 100.0
margin/right = 0.0
margin/bottom = 100.0
columns = 1
script/script = ExtResource( 2 )

[node name="play" parent="." instance=ExtResource( 3 )]

margin/top = 0.0
margin/bottom = 127.0

[node name="button" parent="play"]

margin/top = 13.0
margin/bottom = 113.0
text = "Play"

[node name="level_select" parent="." instance=ExtResource( 3 )]

margin/top = 131.0
margin/bottom = 258.0

[node name="button" parent="level_select"]

margin/top = 13.0
margin/bottom = 113.0
text = "Level select"

[node name="help" parent="." instance=ExtResource( 3 )]

margin/top = 262.0
margin/bottom = 389.0

[node name="button" parent="help"]

margin/top = 13.0
margin/bottom = 113.0
text = "Help"

[node name="exit" parent="." instance=ExtResource( 3 )]

margin/top = 393.0
margin/bottom = 520.0

[node name="button" parent="exit"]

margin/top = 13.0
margin/bottom = 113.0
text = "Exit"

[connection signal="pressed" from="play/button" to="." method="_on_play_pressed"]

[connection signal="pressed" from="level_select/button" to="." method="_on_level_select_pressed"]

[connection signal="pressed" from="help/button" to="." method="_on_help_pressed"]

[connection signal="pressed" from="exit/button" to="." method="_on_exit_pressed"]


[editable path="play"]
[editable path="level_select"]
[editable path="help"]
[editable path="exit"]
